--- a/misc/nginx-default.conf
+++ b/misc/nginx-default.conf
@@ -1,16 +1,17 @@
 upstream api {
-	server 127.0.0.1:8080;
+        server 10.0.0.8:8080;
 }
 
 server {
 	listen 0.0.0.0:80;
-	root /path/to/pool/www/dist;
+	root ~/open-ethereum-pool/www/dist;
 	index index.html index.htm;
 
-	server_name localhost;
+	server_name 52.168.133.100;
 
 	location /api {
-		proxy_pass http://api;
+		proxy_pass http://52.168.133.100:8080/api
+
 	}
 
 	location / {
