--- a/misc/upstart.conf
+++ b/misc/upstart.conf
@@ -1,5 +1,5 @@
 # Open-Ethereum-Pool
-description "Open-Ethereum-Pool"
+description "Open-Nekonium-Pool"
 
 env DAEMON=/home/main/src/open-ethereum-pool/build/bin/open-ethereum-pool
 env CONFIG=/home/main/src/open-ethereum-pool/config.json
